# object-detection-yolo

./: .gitignore  pyproject.toml
bash/: train.sh
configs/: data.yaml
notebooks/: test.ipynb
src/: train.py
